Python webgl doc update

--- a/_posts/python/WebGL/2015-06-30-comparewebgl.html
+++ b/_posts/python/WebGL/2015-06-30-comparewebgl.html
@@ -1,24 +1,16 @@
 ---
 permalink: python/compare-webgl-svg/
 description: Comparing WebGL with Scattergl() to SVG with Scatter() in Python with Plotly.
-title: Python Comparing WebGL vs SVG | plotly
+name: Python Comparing WebGL vs SVG | plotly
 has_thumbnail: false
 thumbnail: /images/static-image
-layout: user-guide
-name: Compare WebGL vs SVG
-language: python
 page_type: example_index
+layout: user-guide
+name: Comparing WebGL vs SVG
+language: python
+title: Comparing WebGL vs SVG | plotly
 ---
 {% raw %}
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="WebGL-vs-SVG">WebGL vs SVG<a class="anchor-link" href="#WebGL-vs-SVG">&#182;</a></h1>
-</div>
-</div>
-</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -39,47 +31,6 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
-<span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.8.12&apos;</pre>
-</div>
-
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
-Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
-
-</div>
-</div>
-</div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
@@ -91,7 +42,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -106,7 +57,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
         <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span> 
             <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;#404040&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
@@ -124,10 +75,10 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/9030.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9030.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -147,7 +98,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[5]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -162,7 +113,7 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
     <span class="n">mode</span> <span class="o">=</span> <span class="s">&#39;markers&#39;</span><span class="p">,</span>
     <span class="n">marker</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
         <span class="n">line</span> <span class="o">=</span> <span class="nb">dict</span><span class="p">(</span>
-            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span>
+            <span class="n">width</span> <span class="o">=</span> <span class="mi">1</span><span class="p">,</span> 
             <span class="n">color</span> <span class="o">=</span> <span class="s">&#39;#404040&#39;</span><span class="p">)</span>
     <span class="p">)</span>
 <span class="p">)</span>
@@ -181,16 +132,36 @@ Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/s
 
 
 <div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_stream output_stderr output_text">
+<pre>/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:236: UserWarning:
+
+Woah there! Look at all those points! Due to browser limitations, the Plotly SVG drawing functions have a hard time graphing more than 500k data points for line charts, or 40k points for other types of charts. Here are some suggestions:
+(1) Use the &#96;plotly.graph_objs.Scattergl&#96; trace object to generate a WebGl graph.
+(2) Trying using the image API to return an image instead of a graph URL
+(3) Use matplotlib
+(4) See if you can create your visualization with fewer data points
+
+If the visualization you&apos;re using aggregates points (e.g., box plot, histogram, etc.) you can disregard this warning.
+
+/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/plotly/plotly/plotly.py:1441: UserWarning:
+
+Estimated Draw Time Too Long
+
+</pre>
+</div>
+</div>
+
+<div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>The draw time for this plot will be slow for all clients.
 </pre>
 </div>
 </div>
 
-<div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~chelsea_lyn/9032.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/9032.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
