scatter and bubble updates

--- a/_posts/python/WebGL/2015-06-30-comparewebgl.html
+++ b/_posts/python/WebGL/2015-06-30-comparewebgl.html
@@ -16,7 +16,7 @@ title: Comparing WebGL vs SVG | plotly
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="SCATTER-PLOTS-WITH-75,000-RANDOM-POINTS">SCATTER PLOTS WITH 75,000 RANDOM POINTS<a class="anchor-link" href="#SCATTER-PLOTS-WITH-75,000-RANDOM-POINTS">&#182;</a></h3>
+<h3 id="Comparing-Scatter-Plots-with-75,000-Random-Points">Comparing Scatter Plots with 75,000 Random Points<a class="anchor-link" href="#Comparing-Scatter-Plots-with-75,000-Random-Points">&#182;</a></h3>
 </div>
 </div>
 </div>
@@ -36,7 +36,7 @@ for increased speed, improved interactivity, and the ability to plot even more d
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="WEBGL">WEBGL<a class="anchor-link" href="#WEBGL">&#182;</a></h3>
+<h3 id="WebGL">WebGL<a class="anchor-link" href="#WebGL">&#182;</a></h3>
 </div>
 </div>
 </div>
