--- a/_posts/plotly_js/3d-mesh/2016-05-30-3d-alphahull-mesh.html
+++ b/_posts/plotly_js/3d-mesh/2016-05-30-3d-alphahull-mesh.html
@@ -11,26 +11,25 @@ arrangement: horizontal
 a=[]; b=[]; c=[];
 for(i=0;i&lt50;i++)
   {
-	var a_ = Math.random(); 
-    a.push(a_);
-	
-	var b_ = Math.random(); 
-    b.push(b_);
-	
-	var c_ = Math.random(); 
-    c.push(c_);
-
+  var a_ = Math.random(); 
+   a.push(a_);
+  
+  var b_ = Math.random(); 
+   b.push(b_);
+  
+  var c_ = Math.random(); 
+   c.push(c_);
   }
-
-// Plotting the mesh.
+// Plotting the mesh
 var data=[
-	{
-		alphahull: 6,
-		opacity:0.8,
-        type: 'mesh3d',
-        x: a,
-        y: b,
-        z: c
-    }
-  ];
+  {
+    alphahull:5,
+    opacity:0.8,
+    color:'rgb(200,100,300)',
+    type: 'mesh3d',
+    x: a,
+    y: b,
+    z: c,
+  }
+];
 Plotly.newPlot('myDiv', data);
