--- a/_posts/python/line-plots/2015-06-30-lines.html
+++ b/_posts/python/line-plots/2015-06-30-lines.html
@@ -11,7 +11,7 @@ title: Python Line Charts | plotly
 display_as: basic
 has_thumbnail: true
 page_type: example_index
-order: 3
+order: 3.1
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -19,9 +19,9 @@ order: 3
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="API-Authentication">API Authentication<a class="anchor-link" href="#API-Authentication">&#182;</a></h4><p>New to Plotly's python API? <br> 
-Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
-Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a></p>
+<h4 id="New-to-Plotly?">New to Plotly?<a class="anchor-link" href="#New-to-Plotly?">&#182;</a></h4><p>Plotly's Python library is free and open source! <a href="https://plot.ly/python/getting-started/">Get started</a> by dowloading the client and <a href="https://plot.ly/python/getting-started/">reading the primer</a>.
+<br>You can set up Plotly to work in <a href="https://plot.ly/python/getting-started/#initialization-for-online-plotting">online</a> or <a href="https://plot.ly/python/getting-started/#initialization-for-offline-plotting">offline</a> mode, or in <a href="https://plot.ly/python/getting-started/#start-plotting-online">jupyter notebooks</a>.
+<br>We also have a quick-reference <a href="https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf">cheatsheet</a> (new!) to help you get started!</p>
 
 </div>
 </div>
@@ -456,7 +456,7 @@ modifiys line width, and adds plot and axes titles.</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -544,7 +544,6 @@ modifiys line width, and adds plot and axes titles.</p>
 
 <span class="c"># Adding labels</span>
 <span class="k">for</span> <span class="n">y_trace</span><span class="p">,</span> <span class="n">label</span><span class="p">,</span> <span class="n">color</span> <span class="ow">in</span> <span class="nb">zip</span><span class="p">(</span><span class="n">y_data</span><span class="p">,</span> <span class="n">labels</span><span class="p">,</span> <span class="n">colors</span><span class="p">):</span>
-
     <span class="c"># labeling the left_side of the plot</span>
     <span class="n">annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">dict</span><span class="p">(</span><span class="n">xref</span><span class="o">=</span><span class="s">&#39;paper&#39;</span><span class="p">,</span> <span class="n">x</span><span class="o">=</span><span class="mf">0.05</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y_trace</span><span class="p">[</span><span class="mi">0</span><span class="p">],</span>
                                   <span class="n">xanchor</span><span class="o">=</span><span class="s">&#39;right&#39;</span><span class="p">,</span> <span class="n">yanchor</span><span class="o">=</span><span class="s">&#39;middle&#39;</span><span class="p">,</span>
@@ -552,7 +551,7 @@ modifiys line width, and adds plot and axes titles.</p>
                                   <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">family</span><span class="o">=</span><span class="s">&#39;Arial&#39;</span><span class="p">,</span>
                                             <span class="n">size</span><span class="o">=</span><span class="mi">16</span><span class="p">,</span>
                                             <span class="n">color</span><span class="o">=</span><span class="n">colors</span><span class="p">,),</span>
-                                  <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">,))</span>
+                                  <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">))</span>
     <span class="c"># labeling the right_side of the plot</span>
     <span class="n">annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">dict</span><span class="p">(</span><span class="n">xref</span><span class="o">=</span><span class="s">&#39;paper&#39;</span><span class="p">,</span> <span class="n">x</span><span class="o">=</span><span class="mf">0.95</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="n">y_trace</span><span class="p">[</span><span class="mi">11</span><span class="p">],</span>
                                   <span class="n">xanchor</span><span class="o">=</span><span class="s">&#39;left&#39;</span><span class="p">,</span> <span class="n">yanchor</span><span class="o">=</span><span class="s">&#39;middle&#39;</span><span class="p">,</span>
@@ -560,7 +559,7 @@ modifiys line width, and adds plot and axes titles.</p>
                                   <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">family</span><span class="o">=</span><span class="s">&#39;Arial&#39;</span><span class="p">,</span>
                                             <span class="n">size</span><span class="o">=</span><span class="mi">16</span><span class="p">,</span>
                                             <span class="n">color</span><span class="o">=</span><span class="n">colors</span><span class="p">,),</span>
-                                  <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">,))</span>
+                                  <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">))</span>
 <span class="c"># Title</span>
 <span class="n">annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">dict</span><span class="p">(</span><span class="n">xref</span><span class="o">=</span><span class="s">&#39;paper&#39;</span><span class="p">,</span> <span class="n">yref</span><span class="o">=</span><span class="s">&#39;paper&#39;</span><span class="p">,</span> <span class="n">x</span><span class="o">=</span><span class="mf">0.0</span><span class="p">,</span> <span class="n">y</span><span class="o">=</span><span class="mf">1.05</span><span class="p">,</span>
                               <span class="n">xanchor</span><span class="o">=</span><span class="s">&#39;left&#39;</span><span class="p">,</span> <span class="n">yanchor</span><span class="o">=</span><span class="s">&#39;bottom&#39;</span><span class="p">,</span>
@@ -568,7 +567,7 @@ modifiys line width, and adds plot and axes titles.</p>
                               <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">family</span><span class="o">=</span><span class="s">&#39;Arial&#39;</span><span class="p">,</span>
                                         <span class="n">size</span><span class="o">=</span><span class="mi">30</span><span class="p">,</span>
                                         <span class="n">color</span><span class="o">=</span><span class="s">&#39;rgb(37,37,37)&#39;</span><span class="p">),</span>
-                              <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">,))</span>
+                              <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">))</span>
 <span class="c"># Source</span>
 <span class="n">annotations</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">dict</span><span class="p">(</span><span class="n">xref</span><span class="o">=</span><span class="s">&#39;paper&#39;</span><span class="p">,</span> <span class="n">yref</span><span class="o">=</span><span class="s">&#39;paper&#39;</span><span class="p">,</span> <span class="n">x</span><span class="o">=</span><span class="mf">0.5</span><span class="p">,</span> <span class="n">y</span><span class="o">=-</span><span class="mf">0.1</span><span class="p">,</span>
                               <span class="n">xanchor</span><span class="o">=</span><span class="s">&#39;center&#39;</span><span class="p">,</span> <span class="n">yanchor</span><span class="o">=</span><span class="s">&#39;top&#39;</span><span class="p">,</span>
@@ -577,7 +576,7 @@ modifiys line width, and adds plot and axes titles.</p>
                               <span class="n">font</span><span class="o">=</span><span class="nb">dict</span><span class="p">(</span><span class="n">family</span><span class="o">=</span><span class="s">&#39;Arial&#39;</span><span class="p">,</span>
                                         <span class="n">size</span><span class="o">=</span><span class="mi">12</span><span class="p">,</span>
                                         <span class="n">color</span><span class="o">=</span><span class="s">&#39;rgb(150,150,150)&#39;</span><span class="p">),</span>
-                              <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">,))</span>
+                              <span class="n">showarrow</span><span class="o">=</span><span class="bp">False</span><span class="p">))</span>
 
 <span class="n">layout</span><span class="p">[</span><span class="s">&#39;annotations&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">annotations</span>
 
@@ -593,7 +592,7 @@ modifiys line width, and adds plot and axes titles.</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/8773.embed" height="600px" width="600px"></iframe>
