--- a/_posts/r/callbacks-sliders/2015-04-09-sliders-bind.html
+++ b/_posts/r/callbacks-sliders/2015-04-09-sliders-bind.html
@@ -9,4 +9,4 @@ sitemap: false
 order: 0
 ---
 p <- plot_ly(economics, x = date, y = uempmed, name = "unemployment")
-p %>% add_trace(y = fitted(loess(uempmed ~ as.numeric(date))))
+p %>% add_trace(x = date, y = fitted(loess(uempmed ~ as.numeric(date))), name = "Loess")
