gauge chart updates

--- a/_posts/python/gauge-chart/2015-06-30-semicircular-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-semicircular-gauge.html
@@ -1,16 +1,17 @@
 ---
 permalink: python/gauge-charts/
-description: How to make gauge meter charts in Python with Plotly.
-title: Python Gauge Chart | plotly
+description: How to make guage meter charts in Python with Plotly. 
+name: Python Gauge Chart | plotly
 has_thumbnail: true
 thumbnail: thumbnail/gauge.jpg
 layout: user-guide
-name: Gauge Chart
+name: Gauge Charts
 language: python
+title: Python Gauge Chart | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
-order: 10
+order: 11
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -18,9 +19,9 @@ order: 10
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Gauge-Meter-Chart-in-Python">Gauge Meter Chart in Python<a class="anchor-link" href="#Gauge-Meter-Chart-in-Python">&#182;</a></h1><p>Learn about API authentication here: <a href="https://plot.ly/python/getting-started">https://plot.ly/python/getting-started</a> <br>
-Find your api_key here: <a href="https://plot.ly/settings/api">https://plot.ly/settings/api</a>  <br>
-For more information about plotly figure attibutes, see: <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a>  <br></p>
+<h4 id="New-to-Plotly?">New to Plotly?<a class="anchor-link" href="#New-to-Plotly?">&#182;</a></h4><p>Plotly's Python library is free and open source! <a href="https://plot.ly/python/getting-started/">Get started</a> by dowloading the client and <a href="https://plot.ly/python/getting-started/">reading the primer</a>.
+<br>You can set up Plotly to work in <a href="https://plot.ly/python/getting-started/#initialization-for-online-plotting">online</a> or <a href="https://plot.ly/python/getting-started/#initialization-for-offline-plotting">offline</a> mode, or in <a href="https://plot.ly/python/getting-started/#start-plotting-online">jupyter notebooks</a>.
+<br>We also have a quick-reference <a href="https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf">cheatsheet</a> (new!) to help you get started!</p>
 
 </div>
 </div>
@@ -30,53 +31,11 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h5 id="Outline">Outline<a class="anchor-link" href="#Outline">&#182;</a></h5><p>We will use <code>donut</code> charts with custom colors to create a <code>semi-circular</code> gauge meter, such that lower half of the chart is invisible(same color as background).</p>
+<h5 id="Gauge-Chart-Outline">Gauge Chart Outline<a class="anchor-link" href="#Gauge-Chart-Outline">&#182;</a></h5><p>We will use <code>donut</code> charts with custom colors to create a <code>semi-circular</code> gauge meter, such that lower half of the chart is invisible(same color as background).</p>
 <p>This <code>semi-circular</code> meter will be overlapped on a base <code>donut</code> chart to create the <code>analog range</code> of the meter. We will have to rotate the base chart to align the range marks in the edges of meter's section, because by default <code>Plotly</code> places them at the center of a pie section.</p>
 
 </div>
 </div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
-<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">from</span> <span class="nn">plotly</span> <span class="kn">import</span> <span class="n">__version__</span>
-<span class="k">print</span> <span class="n">__version__</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt"></div>
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>1.9.3
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
 </div>
 <div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
@@ -93,7 +52,10 @@ For more information about plotly figure attibutes, see: <a href="https://plot.l
 <div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="n">base_chart</span> <span class="o">=</span> <span class="p">{</span>
+<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
+<span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
+
+<span class="n">base_chart</span> <span class="o">=</span> <span class="p">{</span>
     <span class="s">&quot;values&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">40</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">10</span><span class="p">,</span> <span class="mi">10</span><span class="p">],</span>
     <span class="s">&quot;labels&quot;</span><span class="p">:</span> <span class="p">[</span><span class="s">&quot;-&quot;</span><span class="p">,</span> <span class="s">&quot;0&quot;</span><span class="p">,</span> <span class="s">&quot;20&quot;</span><span class="p">,</span> <span class="s">&quot;40&quot;</span><span class="p">,</span> <span class="s">&quot;60&quot;</span><span class="p">,</span> <span class="s">&quot;80&quot;</span><span class="p">,</span> <span class="s">&quot;100&quot;</span><span class="p">],</span>
     <span class="s">&quot;domain&quot;</span><span class="p">:</span> <span class="p">{</span><span class="s">&quot;x&quot;</span><span class="p">:</span> <span class="p">[</span><span class="mi">0</span><span class="p">,</span> <span class="o">.</span><span class="mi">48</span><span class="p">]},</span>
@@ -350,7 +312,7 @@ We are using <code>rotation</code> and <code>direction</code> parameters to star
 <div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;"seamless="seamless" src="https://plot.ly/~pravj648/239.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11852.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
