rm extra - in lin gauge chart doc

--- a/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-linear-gauge.html
@@ -5,7 +5,7 @@ name: Python Linear-Gauge Chart | plotly
 has_thumbnail: true
 thumbnail: thumbnail/linear-gauge.jpg
 layout: user-guide
-name: Linear-Gauge-Chart
+name: Linear-Gauge Chart
 language: python
 title: Python Linear-Gauge Chart | plotly
 display_as: chart_type
@@ -31,7 +31,7 @@ order: 12
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Linear-Gauge-Chart-Shell">Linear-Gauge Chart Shell<a class="anchor-link" href="#Linear-Gauge-Chart-Shell">&#182;</a></h4><p>Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a <code>width</code> between 600-1000px and <code>ticklen</code> should be <code>width/20</code>. These variables are definied in the code below.</p>
+<h4 id="Linear-Gauge-Chart-Shell">Linear Gauge Chart Shell<a class="anchor-link" href="#Linear-Gauge-Chart-Shell">&#182;</a></h4><p>Note the following tutorial shows how to create a linear-gauge chart with 4 gauges. It's recommended to use a <code>width</code> between 600-1000px and <code>ticklen</code> should be <code>width/20</code>. These variables are definied in the code below.</p>
 
 </div>
 </div>
