--- a/_posts/python/shapes/2015-06-30-shapes.html
+++ b/_posts/python/shapes/2015-06-30-shapes.html
@@ -1022,4 +1022,14 @@ order: 14
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/#layout-shapes">https://plot.ly/python/reference/#layout-shapes</a> for more information and chart attribute options!</p>
+
+</div>
+</div>
 </div>{% endraw %}
