--- a/_posts/python/gauge-chart/2015-06-30-semicircular-gauge.html
+++ b/_posts/python/gauge-chart/2015-06-30-semicircular-gauge.html
@@ -49,7 +49,7 @@ order: 11
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -125,7 +125,7 @@ For that, we will also use 6 sections, but one of them will be invisible to form
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">meter_chart</span> <span class="o">=</span> <span class="p">{</span>
@@ -250,7 +250,7 @@ We can use a <code>filled triangle</code> to create our <code>Dial</code>.</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[7]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">layout</span> <span class="o">=</span> <span class="p">{</span>
@@ -306,7 +306,7 @@ We can use a <code>filled triangle</code> to create our <code>Dial</code>.</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[7]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
 <iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11852.embed" height="525px" width="100%"></iframe>
@@ -317,4 +317,14 @@ We can use a <code>filled triangle</code> to create our <code>Dial</code>.</p>
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/">https://plot.ly/python/reference/</a> for more information and chart attribute options!</p>
+
+</div>
+</div>
 </div>{% endraw %}
