--- a/_posts/python/static-image/2015-06-30-static-image-export.html
+++ b/_posts/python/static-image/2015-06-30-static-image-export.html
@@ -1,12 +1,13 @@
 ---
 permalink: python/static-image-export/
-description: How to export plotly graphs as static images
-title: Static Image Export | plotly
+description: How to make SVG shapes in python. Examples of lines, circle, rectangle, and path.
+name: Static Image Export | plotly
 has_thumbnail: true
 thumbnail: thumbnail/png-export.png
 layout: user-guide
 name: Static Image Export
 language: python
+title: Static Image Export | plotly
 display_as: chart_type
 has_thumbnail: true
 page_type: example_index
@@ -26,13 +27,13 @@ order: 15
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
+<div class="prompt input_prompt">In&nbsp;[4]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
 <span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
 <span class="c"># Sign in to plotly</span>
-<span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;DemoAccount&#39;</span><span class="p">,</span> <span class="s">&#39;1gf0wk3&#39;</span><span class="p">)</span> <span class="c"># Replace the username, and API key with your credentials.</span>
+<span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;chelsea_lyn&#39;</span><span class="p">,</span> <span class="s">&#39;etadove97z&#39;</span><span class="p">)</span> <span class="c"># Replace the username, and API key with your credentials.</span>
 
 <span class="c"># Create a simple chart..</span>
 <span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Bar</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mi">2</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">6</span><span class="p">],</span> <span class="n">y</span><span class="o">=</span> <span class="p">[</span><span class="mi">10</span><span class="p">,</span> <span class="mi">12</span><span class="p">,</span> <span class="mi">15</span><span class="p">])</span>
@@ -58,7 +59,7 @@ order: 15
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[5]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="n">py</span><span class="o">.</span><span class="n">image</span><span class="o">.</span><span class="n">save_as</span><span class="p">(</span><span class="n">fig</span><span class="p">,</span> <span class="n">filename</span><span class="o">=</span><span class="s">&#39;a-simple-plot.png&#39;</span><span class="p">)</span>
@@ -3138,6 +3139,112 @@ OstMAiRAAiRAAiRAAn5EgILXjyqbRSUBEiABEiABEiABfyRAweuPtc4ykwAJkAAJkAAJkIAfEfh/
 </pre></div>
 
 </div>
+</div>
+</div>
+
+</div>
+<div class="cell border-box-sizing code_cell rendered">
+<div class="input">
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython2"><pre><span class="n">help</span><span class="p">(</span><span class="n">py</span><span class="o">.</span><span class="n">image</span><span class="p">)</span>
+</pre></div>
+
+</div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+
+<div class="output_area"><div class="prompt"></div>
+<div class="output_subarea output_stream output_stdout output_text">
+<pre>Help on class image in module plotly.plotly.plotly:
+
+class image
+ |  Helper functions wrapped around plotly&apos;s static image generation api.
+ |  
+ |  Class methods defined here:
+ |  
+ |  ishow(cls, figure_or_data, format=&apos;png&apos;, width=None, height=None, scale=None) from __builtin__.classobj
+ |      Display a static image of the plot described by &#96;figure_or_data&#96;
+ |      in an IPython Notebook.
+ |      
+ |      positional arguments:
+ |      - figure_or_data: The figure dict-like or data list-like object that
+ |                        describes a plotly figure.
+ |                        Same argument used in &#96;py.plot&#96;, &#96;py.iplot&#96;,
+ |                        see https://plot.ly/python for examples
+ |      - format: &apos;png&apos;, &apos;svg&apos;, &apos;jpeg&apos;, &apos;pdf&apos;
+ |      - width: output width
+ |      - height: output height
+ |      - scale: Increase the resolution of the image by &#96;scale&#96; amount
+ |             Only valid for PNG and JPEG images.
+ |      
+ |      example:
+ |      &#96;&#96;&#96;
+ |      import plotly.plotly as py
+ |      fig = {&apos;data&apos;: [{&apos;x&apos;: [1, 2, 3], &apos;y&apos;: [3, 1, 5], &apos;type&apos;: &apos;bar&apos;}]}
+ |      py.image.ishow(fig, &apos;png&apos;, scale=3)
+ |  
+ |  save_as(cls, figure_or_data, filename, format=None, width=None, height=None, scale=None) from __builtin__.classobj
+ |      Save a image of the plot described by &#96;figure_or_data&#96; locally as
+ |      &#96;filename&#96;.
+ |      
+ |      Valid image formats are &apos;png&apos;, &apos;svg&apos;, &apos;jpeg&apos;, and &apos;pdf&apos;.
+ |      The format is taken as the extension of the filename or as the
+ |      supplied format.
+ |      
+ |      positional arguments:
+ |      - figure_or_data: The figure dict-like or data list-like object that
+ |                        describes a plotly figure.
+ |                        Same argument used in &#96;py.plot&#96;, &#96;py.iplot&#96;,
+ |                        see https://plot.ly/python for examples
+ |      - filename: The filepath to save the image to
+ |      - format: &apos;png&apos;, &apos;svg&apos;, &apos;jpeg&apos;, &apos;pdf&apos;
+ |      - width: output width
+ |      - height: output height
+ |      - scale: Increase the resolution of the image by &#96;scale&#96; amount
+ |             Only valid for PNG and JPEG images.
+ |      
+ |      example:
+ |      &#96;&#96;&#96;
+ |      import plotly.plotly as py
+ |      fig = {&apos;data&apos;: [{&apos;x&apos;: [1, 2, 3], &apos;y&apos;: [3, 1, 5], &apos;type&apos;: &apos;bar&apos;}]}
+ |      py.image.save_as(fig, &apos;my_image.png&apos;, scale=3)
+ |      &#96;&#96;&#96;
+ |  
+ |  ----------------------------------------------------------------------
+ |  Static methods defined here:
+ |  
+ |  get(figure_or_data, format=&apos;png&apos;, width=None, height=None, scale=None)
+ |      Return a static image of the plot described by &#96;figure_or_data&#96;.
+ |      
+ |      positional arguments:
+ |      - figure_or_data: The figure dict-like or data list-like object that
+ |                        describes a plotly figure.
+ |                        Same argument used in &#96;py.plot&#96;, &#96;py.iplot&#96;,
+ |                        see https://plot.ly/python for examples
+ |      - format: &apos;png&apos;, &apos;svg&apos;, &apos;jpeg&apos;, &apos;pdf&apos;
+ |      - width: output width
+ |      - height: output height
+ |      - scale: Increase the resolution of the image by &#96;scale&#96;
+ |               amount (e.g. &#96;3&#96;)
+ |               Only valid for PNG and JPEG images.
+ |      
+ |      example:
+ |      &#96;&#96;&#96;
+ |      import plotly.plotly as py
+ |      fig = {&apos;data&apos;: [{&apos;x&apos;: [1, 2, 3], &apos;y&apos;: [3, 1, 5], &apos;type&apos;: &apos;bar&apos;}]}
+ |      py.image.get(fig, &apos;png&apos;, scale=3)
+ |      &#96;&#96;&#96;
+
+</pre>
+</div>
+</div>
+
 </div>
 </div>
 
