--- a/_posts/python/static-image/2015-06-30-static-image-export.html
+++ b/_posts/python/static-image/2015-06-30-static-image-export.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/static-image-export/
-description: How to make SVG shapes in python. Examples of lines, circle, rectangle, and path.
+description: Plotly allows you to save static images of your plots. Save the image to your local computer, or embed it inside your Jupyter notebooks as a static image.
 name: Static Image Export | plotly
 has_thumbnail: true
 thumbnail: thumbnail/png-export.png
@@ -19,8 +19,19 @@ order: 15
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Static-Image-Export">Static Image Export<a class="anchor-link" href="#Static-Image-Export">&#182;</a></h1><p>Plotly allows you to save static images of your plots. You can either save the image onto your local computer, or embed it inside your Jupyter/IPython notebooks as a static image.</p>
-<h2 id="Save-the-image:">Save the image:<a class="anchor-link" href="#Save-the-image:">&#182;</a></h2><p>To save the image, you need to login to plotly using <a href="https://plot.ly/settings/api">your credentials</a> (username and API Key).</p>
+<h4 id="New-to-Plotly?">New to Plotly?<a class="anchor-link" href="#New-to-Plotly?">&#182;</a></h4><p>Plotly's Python library is free and open source! <a href="https://plot.ly/python/getting-started/">Get started</a> by dowloading the client and <a href="https://plot.ly/python/getting-started/">reading the primer</a>.
+<br>You can set up Plotly to work in <a href="https://plot.ly/python/getting-started/#initialization-for-online-plotting">online</a> or <a href="https://plot.ly/python/getting-started/#initialization-for-offline-plotting">offline</a> mode, or in <a href="https://plot.ly/python/getting-started/#start-plotting-online">jupyter notebooks</a>.
+<br>We also have a quick-reference <a href="https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf">cheatsheet</a> (new!) to help you get started!</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Save-the-image:">Save the image:<a class="anchor-link" href="#Save-the-image:">&#182;</a></h4><p>To save the image, you need to login to plotly using <a href="https://plot.ly/settings/api">your credentials</a> (username and API Key).</p>
 
 </div>
 </div>
@@ -33,7 +44,7 @@ order: 15
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
 <span class="kn">import</span> <span class="nn">plotly.graph_objs</span> <span class="kn">as</span> <span class="nn">go</span>
 <span class="c"># Sign in to plotly</span>
-<span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;chelsea_lyn&#39;</span><span class="p">,</span> <span class="s">&#39;etadove97z&#39;</span><span class="p">)</span> <span class="c"># Replace the username, and API key with your credentials.</span>
+<span class="n">py</span><span class="o">.</span><span class="n">sign_in</span><span class="p">(</span><span class="s">&#39;DemoAccount&#39;</span><span class="p">,</span> <span class="s">&#39;1gf0wk3&#39;</span><span class="p">)</span> <span class="c"># Replace the username, and API key with your credentials.</span>
 
 <span class="c"># Create a simple chart..</span>
 <span class="n">trace</span> <span class="o">=</span> <span class="n">go</span><span class="o">.</span><span class="n">Bar</span><span class="p">(</span><span class="n">x</span><span class="o">=</span><span class="p">[</span><span class="mi">2</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">6</span><span class="p">],</span> <span class="n">y</span><span class="o">=</span> <span class="p">[</span><span class="mi">10</span><span class="p">,</span> <span class="mi">12</span><span class="p">,</span> <span class="mi">15</span><span class="p">])</span>
@@ -3142,6 +3153,15 @@ OstMAiRAAiRAAiRAAn5EgILXjyqbRSUBEiABEiABEiABfyRAweuPtc4ykwAJkAAJkAAJkIAfEfh/
 </div>
 </div>
 
+</div>
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4>
+</div>
+</div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
