updated old html pages to ipython notebook

--- a/_posts/python/3d-mesh/2015-06-30-mesh-3d.html
+++ b/_posts/python/3d-mesh/2015-06-30-mesh-3d.html
@@ -58,7 +58,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&apos;1.10.0&apos;</pre>
+<pre>&#39;1.10.0&#39;</pre>
 </div>
 
 </div>
