--- a/_posts/python/3d-surface-coloring/2015-06-30-3d_surface_coloring.html
+++ b/_posts/python/3d-surface-coloring/2015-06-30-3d_surface_coloring.html
@@ -1,9 +1,9 @@
 ---
-permalink: python/3d-surface-coloring/
+permalink: python/3d-surface-coloring//
 description: How to Color 3D Surface Plots in Python with Plotly.
 name: 3D Python Surface Coloring | plotly
 has_thumbnail: true
-thumbnail: thumbnail/3d-scatter.jpg
+thumbnail: thumbnail/3d-surface-color.jpg
 layout: user-guide
 name: 3D Surface Coloring
 language: python
