update error bar docs

--- a/_posts/python/table/2015-06-30-table.html
+++ b/_posts/python/table/2015-06-30-table.html
@@ -1,6 +1,6 @@
 ---
 permalink: python/table/
-description: How to make Tables in Python with Plotly.
+description: How to make tables in Python with Plotly.
 name: Python Tables | plotly
 has_thumbnail: true
 thumbnail: thumbnail/table.jpg
@@ -31,7 +31,7 @@ order: 12
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Version-Check">Version Check<a class="anchor-link" href="#Version-Check">&#182;</a></h4><p>Note: tables are available in version <b>1.9.2+</b><br>
+<h4 id="Version-Check">Version Check<a class="anchor-link" href="#Version-Check">&#182;</a></h4><p>Note: Tables are available in version <b>1.9.2+</b><br>
 Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 
 </div>
