--- a/_posts/python/pie/2015-06-30-pie-charts.html
+++ b/_posts/python/pie/2015-06-30-pie-charts.html
@@ -11,7 +11,7 @@ title: Pie Charts in Python | plotly
 display_as: basic
 has_thumbnail: true
 page_type: example_index
-order: 4
+order: 6
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -58,7 +58,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&#39;1.9.12&#39;</pre>
+<pre>&apos;1.11.0&apos;</pre>
 </div>
 
 </div>
@@ -105,7 +105,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/239.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11908.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -150,7 +150,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/241.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11910.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -252,7 +252,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/243.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11912.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -360,7 +360,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output_area"><div class="prompt output_prompt">Out[5]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/245.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11914.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -374,7 +374,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h2><p>See <a href="https://plot.ly/python/reference/##pie">https://plot.ly/python/reference/##pie</a> for more information and chart attribute options!</p>
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/#pie">https://plot.ly/python/reference/#pie</a> for more information and chart attribute options!</p>
 
 </div>
 </div>
