--- a/_posts/python/time-series/2015-06-30-time-series.html
+++ b/_posts/python/time-series/2015-06-30-time-series.html
@@ -11,7 +11,7 @@ title: Time Series Plots | plotly
 display_as: basic
 has_thumbnail: true
 page_type: example_index
-order: 3
+order: 7
 ---
 {% raw %}
 <div class="cell border-box-sizing text_cell rendered">
@@ -31,54 +31,13 @@ order: 3
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h4 id="Version-Check">Version Check<a class="anchor-link" href="#Version-Check">&#182;</a></h4><p>Note: Time Series are available in version <b>1.9.12+</b><br>
-Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
-
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[1]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly</span>
-<span class="n">plotly</span><span class="o">.</span><span class="n">__version__</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
-
-
-<div class="output_text output_subarea output_execute_result">
-<pre>&#39;1.9.12&#39;</pre>
-</div>
-
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Time-Series-Plot-with-datetime-Objects">Time Series Plot with <code>datetime</code> Objects<a class="anchor-link" href="#Time-Series-Plot-with-datetime-Objects">&#182;</a></h3>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[2]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -105,10 +64,10 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[1]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/247.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11916.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -128,7 +87,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[3]:</div>
+<div class="prompt input_prompt">In&nbsp;[2]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -150,10 +109,10 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[2]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/249.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11918.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -173,7 +132,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[4]:</div>
+<div class="prompt input_prompt">In&nbsp;[3]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span class="kn">import</span> <span class="nn">plotly.plotly</span> <span class="kn">as</span> <span class="nn">py</span>
@@ -216,10 +175,10 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 <div class="output">
 
 
-<div class="output_area"><div class="prompt output_prompt">Out[4]:</div>
+<div class="output_area"><div class="prompt output_prompt">Out[3]:</div>
 
 <div class="output_html rendered_html output_subarea output_execute_result">
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~Diksha_Gabha/251.embed" height="525px" width="100%"></iframe>
+<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://plot.ly/~chelsea_lyn/11920.embed" height="525px" width="100%"></iframe>
 </div>
 
 </div>
@@ -233,7 +192,7 @@ Run  <code>pip install plotly --upgrade</code> to update your Plotly version</p>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h2><p>See <a href="https://plot.ly/python/reference/##scatter">https://plot.ly/python/reference/##scatter</a> for more information and chart attribute options!</p>
+<h4 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h4><p>See <a href="https://plot.ly/python/reference/#layout-xaxis-rangeslider">https://plot.ly/python/reference/#layout-xaxis-rangeslider</a> and <a href="https://plot.ly/python/reference/#layout-xaxis-rangeselector">https://plot.ly/python/reference/#layout-xaxis-rangeselector</a> for more information and chart attribute options!</p>
 
 </div>
 </div>
