missing trailing slash

--- a/_posts/2015-07-13-eula_index.html
+++ b/_posts/2015-07-13-eula_index.html
@@ -1,6 +1,6 @@
 ---
 title: EULA | Plotly
-permalink: /eula
+permalink: /eula/
 description: The End User License Agreement for Plotly.js and other Plotly products
 layout: langindex
 language: eula
