--- a/_posts/2016-04-13-scala-index.html
+++ b/_posts/2016-04-13-scala-index.html
@@ -1,5 +1,5 @@
 ---
-title: Scala Graphing Library, Plotly
+title: Scala Graphing Library | Plotly
 permalink: /scala/
 description: Plotly's Scala graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, subplots, and multiple-axes charts.
 layout: langindex
@@ -14,7 +14,9 @@ language: scala
 			<div class="--category-img"><img src="http://images.plot.ly/plotly-documentation/thumbnail/scala-small.jpg" alt=""></div>
 			<div class="--body">
 				<h1>Plotly Scala Library</h1>
-				<p>{{page.description}}</p>
+				<p>
+					{{page.description}}
+				</p>
 			</div>
 		</div>
 	</div>
