--- a/_posts/python/pie/2015-06-30-pie-charts.html
+++ b/_posts/python/pie/2015-06-30-pie-charts.html
@@ -1,5 +1,5 @@
 ---
-permalink: python/pie/
+permalink: python/pie-charts/
 description: How to make Pie Charts.
 name: Python Pie Charts | plotly
 has_thumbnail: true
