rm extra title from js index

--- a/_posts/2016-06-03-plotly_js_function_ref.html
+++ b/_posts/2016-06-03-plotly_js_function_ref.html
@@ -4,26 +4,11 @@ name: Plotly.js Function Reference
 permalink: /javascript/plotlyjs-function-reference/
 description: Plotly.js function reference. How to create, update, and modify graphs drawn with Plotly's Javascript Graphing Library.
 language: plotly_js
-layout: langindex
+layout: getstart
 redirect_from: /javascript-graphing-library/plotlyjs-function-reference
 ---
 
-<header class="--welcome">
-    <div class="--welcome-body">
-        <!--div.--wrap-inner-->
-        <div class="--title">
-            <div class="--category-img"><img src="https://images.plot.ly/language-icons/api-home/js-logo.png" style="margin-top: -30px;" alt=""></div>
-            <div class="--body">
-                <h1>What is plotly.js?</h1>
-                <p>
-                    Built on top of d3.js and <a target="_blank" href="http://stack.gl">stack.gl</a>, plotly.js is a high-level, declarative charting library. plotly.js ships with 20 chart types, including 3D charts, statistical graphs, and SVG maps.
-                    <br>Learn about <a href="https://plot.ly/javascript/open-source-announcement">why we open sourced plotly.js</a> or <a target="_blank" href="https://github.com/plotly/plotly.js">view the source on GitHub</a>.
-                </p>
-            </div>
-        </div>
-    </div>
-</header>
-<section class="tutorial-content --tutorial-index --base">
+<h1>plotly.js Function Reference</h1>
 
 <h4 id="retrieving-data-layout"><a class="no_underline plot-blue" href="#retrieving-data-layout">Retrieving the plot <code>data</code> or <code>layout</code></pre> objects</a></h4>
 
